// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditName conponent renders correctly 1`] = `
<View>
  <View
    style={
      Object {
        "flexDirection": "row",
        "paddingTop": 8,
      }
    }
  >
    <View
      accessibilityState={
        Object {
          "disabled": true,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={false}
      hitSlop={
        Object {
          "bottom": 10,
          "left": 10,
          "right": 10,
          "top": 10,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Object {
              "marginRight": 8,
            },
            Object {
              "backgroundColor": undefined,
            },
          ]
        }
      >
        <View
          style={
            Array [
              undefined,
              undefined,
              undefined,
            ]
          }
        >
          <View />
        </View>
      </View>
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#181C32",
            "fontFamily": "BeVietnamPro-SemiBold",
            "fontSize": 15,
          },
          Object {},
          undefined,
        ]
      }
    >
      Name
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "marginVertical": 4,
        },
        Object {},
      ]
    }
    testID="text_input"
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderColor": "#A4A9B7",
            "borderRadius": 4,
            "borderWidth": 1,
            "flexDirection": "row",
            "justifyContent": "center",
            "minHeight": 44,
            "paddingRight": 12,
          },
          Object {
            "borderColor": "#A4A9B7",
          },
          undefined,
        ]
      }
    >
      <TextInput
        maxLength={100}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholderTextColor="#767D93"
        selectionColor="#767D93"
        style={
          Array [
            Object {
              "flex": 1,
              "fontFamily": "BeVietnamPro-Light",
              "minHeight": 44,
              "paddingHorizontal": 12,
            },
            Object {
              "color": "#181C32",
            },
          ]
        }
        testID="edit_name.text_input"
        value="Test Name"
      />
    </View>
  </View>
</View>
`;

exports[`EditName conponent should show helperContent when error=true 1`] = `
<View>
  <View
    style={
      Object {
        "flexDirection": "row",
        "paddingTop": 8,
      }
    }
  >
    <View
      accessibilityState={
        Object {
          "disabled": true,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={false}
      hitSlop={
        Object {
          "bottom": 10,
          "left": 10,
          "right": 10,
          "top": 10,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flexDirection": "row",
            },
            Object {
              "marginRight": 8,
            },
            Object {
              "backgroundColor": undefined,
            },
          ]
        }
      >
        <View
          style={
            Array [
              undefined,
              undefined,
              undefined,
            ]
          }
        >
          <View />
        </View>
      </View>
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#181C32",
            "fontFamily": "BeVietnamPro-SemiBold",
            "fontSize": 15,
          },
          Object {},
          undefined,
        ]
      }
    >
      Name
    </Text>
  </View>
  <View
    style={
      Array [
        Object {
          "marginVertical": 4,
        },
        Object {},
      ]
    }
    testID="text_input"
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderColor": "#A4A9B7",
            "borderRadius": 4,
            "borderWidth": 1,
            "flexDirection": "row",
            "justifyContent": "center",
            "minHeight": 44,
            "paddingRight": 12,
          },
          Object {
            "borderColor": "#A4A9B7",
          },
          undefined,
        ]
      }
    >
      <TextInput
        maxLength={100}
        onBlur={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        placeholderTextColor="#767D93"
        selectionColor="#767D93"
        style={
          Array [
            Object {
              "flex": 1,
              "fontFamily": "BeVietnamPro-Light",
              "minHeight": 44,
              "paddingHorizontal": 12,
            },
            Object {
              "color": "#E90C22",
            },
          ]
        }
        testID="edit_name.text_input"
        value="Test Name"
      />
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#181C32",
            "fontFamily": "BeVietnamPro-Light",
            "fontSize": 13,
          },
          Object {
            "color": "#E90C22",
          },
          undefined,
        ]
      }
      testID="text_input.text_helper"
    >
      Name must not be empty
    </Text>
  </View>
</View>
`;
